fix: 코드래빗 수정
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>